<resources>
    <string name="app_name">supershot</string>
    <string name="action_settings">Settings</string>
    <string name="kakao_app_key">513271bb6e749d58f32f645d4da3278b</string>
    <string name="ss_string_001">돈버는 스코어 카드</string>
    <string name="ss_string_002">회원가입</string>
    <string name="ss_string_003">아이디를 입력하세요</string>
    <string name="ss_string_004">중복확인</string>
    <string name="ss_string_005">아이디가 중복되었습니다.</string>
    <string name="ss_string_006">실명을 입력하세요</string>
    <string name="ss_string_007">실명을 등록하세요.</string>
    <string name="ss_string_008">핸드폰 번호를 등록하세요(‘-‘제외)</string>
    <string name="ss_string_009">인증번호 전송</string>
    <string name="ss_string_010">인증번호를 입력하세요</string>
    <string name="ss_string_011">성별을 선택하세요</string>
    <string name="ss_string_012">등급을 선택하세요</string>
    <string name="ss_string_013">친구추천 아이디를 입력하세요</string>
    <string name="ss_string_014">[필수]</string>
    <string name="ss_string_015">서비스 이용약관 동의</string>
    <string name="ss_string_016">개인정보 수집 및 이용동의</string>
    <string name="ss_string_017">확인</string>
    <string name="ss_string_018">회원가입 완료</string>
    <string name="ss_string_019">회원가입을 축하드립니다!\n가입 축하기념으로\n50,000 슈퍼캐시를 받으셨습니다!</string>
    <string name="ss_string_020">기업이나 단체 가입은 아래 버튼을 클릭하세요.</string>
    <string name="ss_string_021">기업/단체가입</string>
    <string name="ss_string_022">회원정보 동기화</string>
    <string name="ss_string_023">%1$s님의 전화번호와\n이메일주소가 중복됨을 확인했습니다.</string>
    <string name="ss_string_024">기존사용자 정보를 복원하시겠습니까?</string>
    <string name="ss_string_025">기업(단체) 회원가입</string>
    <string name="ss_string_026">단체구분을 선택하세요</string>
    <string name="ss_string_027">회사명 또는 단체명을 입력하세요</string>
    <string name="ss_string_028">골프장을 선택하세요</string>
    <string name="ss_string_029">대표자명을 입력하세요</string>
    <string name="ss_string_030">사업자번호를 입력하세요</string>
    <string name="ss_string_031">대표전화를 입력하세요</string>
    <string name="ss_string_032">홈페이지주소를 입력하세요</string>
    <string name="ss_string_033">주소를 입력하세요(골프장,개인기업,법인기업인 경우)</string>
    <string name="ss_string_034">회원가입을 축하드립니다!</string>
    <string name="ss_string_035">%1$s님이 등록한 사업자정보가\n사업자명으로 등록되어 있습니다.</string>
    <string name="ss_string_036">확인 후 재가입하세요.</string>
    <string name="ss_string_037">기업회원 중복</string>
    <string name="ss_string_038">게임기록 동기화</string>
    <string name="ss_string_039">%1$s님과 %2$s\n%3$s 골프장에서\n게임을 하셨나요?</string>
    <string name="ss_string_040">확인버튼을 클릭하시면\n게임기록이 동기화됩니다.</string>
    <string name="ss_string_041">아니요</string>
    <string name="ss_string_042">홈</string>
    <string name="ss_string_043">대회</string>
    <string name="ss_string_044">컨텐츠</string>
    <string name="ss_string_045">라운드</string>
    <string name="ss_string_046">평균스코어</string>
    <string name="ss_string_047">평균핸디캡</string>
    <string name="ss_string_048">복잡한 골프 내기를 쉽게 계산해보세요</string>
    <string name="ss_string_049">게임시작</string>
    <string name="ss_string_050">현재 진행중인 게임</string>
    <string name="ss_string_051">동반자</string>
    <string name="ss_string_052">스코어</string>
    <string name="ss_string_053">Hole</string>
    <string name="ss_string_054">게임 이어하기</string>
    <string name="ss_string_055">스코어 Live</string>
    <string name="ss_string_056">근처 골프코스</string>
    <string name="ss_string_057">더보기 ></string>
    <string name="ss_string_058">라운드 시작</string>
    <string name="ss_string_059">스코어 Live</string>
    <string name="ss_string_060">현재 라운드 중 친구들</string>
    <string name="ss_string_061">내기 기록 %1$s</string>
    <string name="ss_string_062">Copyright &#169; SuperShot. All rights reserved.</string>
    <string name="ss_string_063">게임종류</string>
    <string name="ss_string_064">게임 방식을 선택하세요</string>
    <string name="ss_string_065">스킨스 플레이는 일정 금액을 사전에 내놓고\n홀당 1등 플레이어만 상금을 받는\n게임 방식입니다.</string>
    <string name="ss_string_066">스킨스 플레이는 플레이어 간에 핸디없이\n동등하게 실력을 알 수 있습니다.</string>
    <string name="ss_string_067">다음</string>
    <string name="ss_string_068">선택</string>
    <string name="ss_string_069">이용안내</string>
    <string name="ss_string_070">골프게임 안내</string>
    <string name="ss_string_071">자세히 알아보기</string>
    <string name="ss_string_072">20여가지 이상의 다이나믹한 골프게임을 체험해 보세요.</string>
    <string name="ss_string_073">복잡하고 어려운 내기 계산을 스코어 등록만으로 편리하게 계산됩니다.</string>
    <string name="ss_string_074">일파만파, 뽑기, 뒤집기, 배판 등 내기에서 발생 할 수 있는 모든 옵션으로 재미를 더해드립니다.</string>
    <string name="ss_string_075">다양한 스코어 방식으로 스코어가 낮은 라운더들도 재미있게 내기를 이길 수 있습니다.</string>
    <string name="ss_string_076">싱글플레이, 멀티플레이, 랜덤플레이 등 다양한 방식으로 신나게 즐겨보세요.</string>
    <string name="ss_string_077">보너스 옵션</string>
    <string name="ss_string_078">게임을 모두 마치시면 슈퍼샷 캐시를 보너스로 드립니다.</string>
    <string name="ss_string_079">내기옵션</string>
    <string name="ss_string_080">게임 금액을 설정하세요</string>
    <string name="ss_string_081">9홀당 상금을 입력하세요</string>
    <string name="ss_string_082">18홀당 상금을 입력하세요</string>
    <string name="ss_string_083">홀당 타수차이 만큼 상금을 입력하세요</string>
    <string name="ss_string_084">18홀당 타수차이 만큼 상금을 입력하세요</string>
    <string name="ss_string_085">홀당 정해진 상금을 입력하세요</string>
    <string name="ss_string_086">스코어 계산방법</string>
    <string name="ss_string_087">스코어 계산방법을 선택하세요</string>
    <string name="ss_string_088">배판 옵션</string>
    <string name="ss_string_089">버디 이상</string>
    <string name="ss_string_090">전체 인원이 동점 기록</string>
    <string name="ss_string_091">양파 이상</string>
    <string name="ss_string_092">트리플보기 이상 (Par 4, 5)</string>
    <string name="ss_string_093">더블보기 이상 (Par 3)</string>
    <string name="ss_string_094">따당 (4배판으로 계산)</string>
    <string name="ss_string_095">이글 이상</string>
    <string name="ss_string_096">롱기 (Par 5에서 파이상 스코어 기록)</string>
    <string name="ss_string_097">니어 (Par 3에서 파이상 스코어 기록)</string>
    <string name="ss_string_098">빽도 (롱기나 니어가 파를 못했을 경우, 동반자에게 니어값을 주는 것)</string>
    <string name="ss_string_099">보너스 옵션</string>
    <string name="ss_string_100">OECD 옵션</string>
    <string name="ss_string_101">가입조건</string>
    <string name="ss_string_102">6홀 이상 승리</string>
    <string name="ss_string_103">오비</string>
    <string name="ss_string_104">벙커</string>
    <string name="ss_string_105">트리플퍼팅 이상</string>
    <string name="ss_string_106">트리플보기 이상</string>
    <string name="ss_string_107">해저드</string>
    <string name="ss_string_108">카트길</string>
    <string name="ss_string_109">나무</string>
    <string name="ss_string_110">벌금 옵션</string>
    <string name="ss_string_111">더블보기 이상</string>
    <string name="ss_string_112">쿼드러플보기 이상</string>
    <string name="ss_string_113">양파이상</string>
    <string name="ss_string_114">배판에 해당되는 옵션을 선택하세요.</string>
    <string name="ss_string_115">보너스 옵션을 선택하면 동반자에게 추가 상금을 받을 수 있습니다.</string>
    <string name="ss_string_116">OECD 옵션에 해당될 경우 벌금을 내세요. 벌금은 뒤풀이 비용으로 사용하세요.</string>
    <string name="ss_string_117">해당 옵션에 해당될 경우 벌금을 내세요. 벌금은 뒤풀이 비용으로 사용하세요.</string>
    <string name="ss_string_118">원</string>
    <string name="ss_string_119">전반홀이 잘 끝났네요!\n남는건 사진밖에 없습니다!</string>
    <string name="ss_string_120">동영상</string>
    <string name="ss_string_121">사진</string>
    <string name="ss_string_122">후반코스를 시작합니다.\n코스 확인 후 시작하세요!</string>
    <string name="ss_string_123">스코어 입력</string>
    <string name="ss_string_124">선수명</string>
    <string name="ss_string_125">To-Par</string>
    <string name="ss_string_126">누적 총액</string>
    <string name="ss_string_127">전반홀 결산</string>
    <string name="ss_string_128">후반홀 시작</string>
    <string name="ss_string_129">최종 스코어 확인</string>
    <string name="ss_string_130">최종 스코어</string>
    <string name="ss_string_131">취소</string>
    <string name="ss_string_132">아니오</string>
    <string name="ss_string_133">스코어 카드 저장</string>
    <string name="ss_string_134">즐거운 라운드가 끝났군요!\n동반자들과 추억을 남겨주세요!</string>
    <string name="ss_string_135">게임결과</string>
    <string name="ss_string_136">게임비 &amp; 보너스 정산</string>
    <string name="ss_string_137">벌금 &amp; OECD</string>
    <string name="ss_string_138">스코어카드 확인</string>
    <string name="ss_string_139">남성</string>
    <string name="ss_string_140">여성</string>
    <string name="ss_string_141">아마추어</string>
    <string name="ss_string_142">프로</string>
    <string name="ss_string_143">위치기반 서비스 이용약관 동의</string>
    <string name="ss_string_144">아이디 중복 체크를 해주세요.</string>
    <string name="ss_string_145">약관에 동의해 주세요.</string>
    <string name="ss_string_146">사용가능한 아이디입니다.</string>
    <string name="ss_string_147">스킨스</string>
    <string name="ss_string_148">스트로크</string>
    <string name="ss_string_149">매치</string>
    <string name="ss_string_150">명랑</string>
    <string name="ss_string_151">스트로크는 플레이어간에 실력차가 있을 경우\n핸디캡을 적용하는 게임입니다.</string>
    <string name="ss_string_152">홀별 승리방식인 경우 핸디캡 차이만큼\n미리 상금을 주고 시작합니다,</string>
    <string name="ss_string_153">Skip</string>
    <string name="ss_string_154">Next</string>
    <string name="ss_string_155">홀당(승리)</string>
    <string name="ss_string_156">18홀(타수)</string>
    <string name="ss_string_157">18홀합산</string>
    <string name="ss_string_158">선택되어 있는 친구입니다.</string>
    <string name="ss_string_159"></string>
    <string name="ss_string_160"></string>
    <string name="ss_string_300">핸디캡</string>
    <string name="ss_string_301">최신스코어</string>
    <string name="ss_string_302">동반라운더</string>
    <string name="ss_string_303">+ 선수 추가</string>
    <string name="ss_string_304">레드팀</string>
    <string name="ss_string_305">블루팀</string>
    <string name="ss_string_306">선수추가</string>
    <string name="ss_string_307">슈퍼샷</string>
    <string name="ss_string_308">내친구</string>
    <string name="ss_string_309">연락처</string>
    <string name="ss_string_310">+ 새 친구추가</string>
    <string name="ss_string_311">새로운 친구를 추가해보세요.</string>
    <string name="ss_string_312">새 친구추가</string>
    <string name="ss_string_313">등록</string>
    <string name="ss_string_314">게임방식을 변경하시겠습니까?</string>
    <string name="ss_string_315">네</string>
    <string name="ss_string_316">상금을 변경하시겠습니까?</string>
    <string name="ss_string_317">1만원</string>
    <string name="ss_string_318">2만원</string>
    <string name="ss_string_319">5만원</string>
    <string name="ss_string_320">10만원</string>
    <string name="ss_string_321">게임 종료하기</string>
    <string name="ss_string_322">게임을 종료하시겠습니까?\n게임종료를 하시면 스코어가 기록되지\n않고 게임캐시를 받으실 수 없습니다.</string>
    <string name="ss_string_323">게임기록원을\n다른 라운더로 변경하실래요?</string>
    <string name="ss_string_324">게임기록원 변경</string>
    <string name="ss_string_325">%1$s님이\n게임기록원으로 요청하셨습니다.\n받으시겠습니까?</string>
    <string name="ss_string_326">내기기록</string>
    <string name="strokes_stroke">스트로크는 플레이어간에 실력차가 있을 경우 핸디캡을 적용하는 게임입니다.</string>
    <string name="strokes_stroke_desc">홀별 승리방식인 경우 핸디캡 차이만큼 미리 상금을 주고 시작합니다.</string>
    <string name="strokes_scratch">스크래치는 플레이어간에 실력차가 없을 경우 핸디캡을 적용하지 않는 게임입니다.</string>
    <string name="strokes_scratch_desc"></string>
    <string name="strokes_onebest">원베스트크코어는 팀전(1:2,3)으로 다수 플레이어의 베스트 스코어와 1인의 스코어를 적용하는 게임입니다.</string>
    <string name="strokes_onebest_desc"></string>
    <string name="strokes_team_stroke">팀스크래치는 팀전(2:2)으로 실력차가 없는 경우 핸디캡을 적용하지 않는 게임입니다.</string>
    <string name="strokes_team_stroke_desc">홀별 승리방식인 경우 핸디캡 차이만큼 미리 상금을 주고 시작합니다.</string>
    <string name="strokes_team_scratch">팀스크래치는 팀전(2:2)으로 실력차가 없는 경우 핸디캡을 적용하지 않는 게임입니다.</string>
    <string name="strokes_team_scratch_desc"></string>
    <string name="strokes_random_scratch">랜덤스크래치는  홀별로 랜덤하게 팀을 만들어 핸디캡을 적용하지 않는 게임입니다.</string>
    <string name="strokes_random_scratch_desc"></string>
    <string name="strokes_honest">어니스트존은 플레이어가 지정한 핸디캡을 기준으로 초과 또는 미달하는 점수를 계산하여 벌금을 내는 게임입니다.</string>
    <string name="strokes_honest_desc"></string>
    <string name="skins_skins">스킨스는 플레이어가 일정금액을 사전에 내놓고 홀별로 정해진 상금을 획득하는 게임입니다.</string>
    <string name="skins_skins_desc"></string>
    <string name="skins_jopok_skins">조폭스킨스는 이전 승리자가 보기이하의 타수를 기록할 경우 다음 승리자에게 딴돈을 상납하는 게임입니다.</string>
    <string name="skins_jopok_skins_desc"></string>
    <string name="skins_ggol_skins">꼴등스킨스는 홀별로 꼴등 플레이어가 벌금을 내는 게임입니다.</string>
</resources>