<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/game" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_regular"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:text="@string/ss_string_302"
                    android:textColor="@color/black_two"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/underline_apple_1"
                android:fontFamily="@font/sans_regular"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="-3sp"
                android:paddingBottom="8dp"
                android:text="@string/ss_string_307"
                android:textColor="@color/apple"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/brown_grey"
                android:lineSpacingExtra="-3sp"
                android:gravity="center_horizontal"
                android:text="@string/ss_string_308"
                android:fontFamily="@font/sans_regular" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/brown_grey"
                android:lineSpacingExtra="-3sp"
                android:gravity="center_horizontal"
                android:text="@string/ss_string_309"
                android:fontFamily="@font/sans_regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/whitetwo_top_r15"
            android:layout_marginBottom="250dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_friend_check" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white_two"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/indicator" />

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="27dp"
            android:background="@drawable/apple_r17"
            android:fontFamily="@font/sans_regular"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="3dp"
            android:text="@string/ss_string_310"
            android:textColor="@color/apple"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sans_regular"
            android:text="@string/ss_string_311"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_confirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:elevation="6dp"
            app:cardBackgroundColor="@color/apple"
            app:cardCornerRadius="25dp"
            app:cardElevation="6dp"
            app:cardMaxElevation="6dp">

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/sans_regular"
            android:gravity="center"
            android:text="@string/ss_string_068"
            android:textColor="@color/white_two"
            android:textSize="18sp" />


    </LinearLayout>


</RelativeLayout>