<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_80"
    tools:context=".ui.MainActivity">

    <LinearLayout android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="right"
            android:src="@drawable/ico_close" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_top_r15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_two"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/sans_bold"
                    android:text="@string/ss_string_312"
                    android:textColor="@color/black_two" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingBottom="11dp"
                    android:background="@drawable/underline_white_1"
                    android:textSize="14sp"
                    android:fontFamily="@font/sans_regular"
                    android:textColor="@color/light_grey_blue"
                    android:hint="@string/ss_string_006"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingBottom="11dp"
                    android:background="@drawable/underline_white_1"
                    android:textSize="14sp"
                    android:fontFamily="@font/sans_regular"
                    android:textColor="@color/light_grey_blue"
                    android:hint="@string/ss_string_008"/>



                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:cardBackgroundColor="@color/apple"
                    android:elevation="6dp"
                    app:cardElevation="6dp"
                    app:cardMaxElevation="6dp"
                    app:cardCornerRadius="25dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/ss_string_313"
                        android:textColor="@color/white_two"
                        android:fontFamily="@font/sans_regular"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>